syntax = "proto3";

package bank;

service WalletService {
  rpc GetByUserID (GetByUserIDRequest) returns (GetByUserIDResponse) {};
  rpc AddPayments (AddPaymentsRequest) returns (AddPaymentsResponse) {};
}

message GetByUserIDRequest {
  int32 user_id = 1;
}

message GetByUserIDResponse {
  Wallet wallet = 1;
}

message AddPaymentsRequest {
  int32 user_id = 1;
  repeated Payment payments = 2;
}

message AddPaymentsResponse {
  Wallet wallet = 1;
}

message User{
  int32 id = 1;
	string name = 2;
}

message Wallet {
  int32 id = 1;
  int32 total = 2;
  repeated Payment recent_payments = 3;
}

message Payment {
  int32 id = 1;
  int32 amount = 2;
  string target = 3;
  string reason = 4;
}
